<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Device Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_devices">My Devices</string>
    <string name="configure">Configure</string>
    <string name="operate">Operate</string>
    <string name="add_device">Add</string>
    <string name="action_new">New</string>
    <string name="device_settings">Device Settings</string>
    <string name="title_activity_device_detail">Device Detail</string>
    <string name="save">Save</string>
    <string name="title_activity_device_configuration">DeviceConfigurationActivity</string>

    <!-- Begin activity bar -->
    <string name="action_accept">Accept</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_activity_ir_transmitter">IrTransmitterActivity</string>
    <string name="title_activity_switch">SwitchActivity</string>
    <string name="title_activity_login1">Login1Activity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="activity_register_username">Username</string>
    <string name="activity_register_firstName">First Name</string>
    <string name="activity_register_lastName">Last Name</string>
    <string name="activity_register_email">Email</string>
    <string name="password">Password</string>
    <string name="action_ok">OK</string>
    <string name="activity_device_detail_driver_control">Driver Control</string>
    <string name="title_activity_pick_driver">PickDriverActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="action_change_password">Change Password</string>

</resources>
