<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.deviceyun.devicemanager.DeviceDetailActivity" >
    
    
	<item
        android:id="@+id/action_cancel"
        android:icon="@drawable/ic_action_cancel"
        android:title="@string/action_cancel"
     	app:showAsAction="ifRoom"/>
	<item
        android:id="@+id/action_accept"
        android:icon="@drawable/ic_action_accept"
        android:title="@string/action_accept"
     	app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
